2008-03-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.dsw: adapted for moved cpp2, added dependency for as_z80 on config

2008-03-31 Borut Razem <borut.razem AT siol.net>

	* support/cpp2 renamed to support/cpp
	* support/cpp2/libiberty/filenames.h, support/cpp2/libiberty/hex.c,
	  support/cpp2/libiberty/splay-tree.c,
	  support/cpp2/libiberty/splay-tree.h, support/cpp2/libcpp/macro.c,
	  support/cpp2/libcpp/directives.c,
	  support/cpp2/libcpp/include/cpplib.h,
	  support/cpp2/libcpp/include/symtab.h,
	  support/cpp2/libcpp/include/line-map.h,
	  support/cpp2/libcpp/line-map.c, support/cpp2/libcpp/files.c,
	  support/cpp2/libcpp/init.c, support/cpp2/libcpp/traditional.c,
	  support/cpp2/libcpp/expr.c, support/cpp2/libcpp/internal.h,
	  support/cpp2/libcpp/lex.c, support/cpp2/libcpp/system.h,
	  support/cpp2/libcpp/charset.c: SDCPP synchronized with GCC CPP
	  release version 4.3.0
	* configure.in, configure, Makefile.in, Makefile.bcc:
	  adapted for moved cpp2

2008-03-31 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/hc08/mc68hc908jkjl.h: committed fix for bug #1929739,
	  thanks Alejandro Pustowka <alejo_pustowka AT yahoo.com.mx>

2008-03-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCloop.c (loopInvariants): applied fix for bug 1717943, thanks
	  Robert Larice
	* support/regression/tests/bug1717943.c: new, added

2008-03-30 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c (assignResultValue): Reverted reversal of order of bytewise
	  return value assignments introduced in last commit.

2008-03-30 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c (emitDebug, assignResultValue, genPlus, genMinus, genMult,
	  genJumpTab):
	  Use 16-bit instructions for addition in some additional cases,
	  implemented RFEs #1914251, #1914245, #1922090, #1921382, #1918323.

2008-03-30 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/ralloc.c (serialRegAssign, allocReg, tryAllocatingRegPair):